--- a/index.html
+++ b/index.html
@@ -87,20 +87,20 @@
             </button>
         </div>
 
-        <header>
+        <header style="border: 4px red solid">
             <div class="header-content">
-                <div class="logo">
+                <div class="logo" style="border: 4px green solid">
                     <a href="#top" data-track="nav-logo">
                         <img
-                            src="logo.png"
-                            alt="InnovaRetail"
-                            width="120"
+                            src="logo.svg"
+                            alt="NEXAUTIA"
+                            width="340"
                             height="auto"
                             id="logo"
                         />
                     </a>
                 </div>
-                <nav>
+                <nav style="border: 4px yellow solid">
                     <a href="#servicios" data-track="nav-servicios"
                         >Servicios</a
                     >
@@ -116,7 +116,7 @@
                     >
                     <a href="#contacto" data-track="nav-contacto">Contacto</a>
                 </nav>
-                <div class="header-controls">
+                <div class="header-controls" style="border: 2px solid black">
                     <div class="language-selector">
                         <button
                             id="current-language"
@@ -542,17 +542,20 @@
                 <div>
                     <img
                         src="logo.png"
-                        alt="InnovaRetail"
-                        width="150"
+                        alt="NexAutIA"
+                        width="80"
                         height="auto"
                         class="vcard-avatar"
                     />
                 </div>
                 <div class="vcard-info">
-                    <h3>AutomatizaPro - Consultor en automatización</h3>
-                    <p>📧 contacto@automatizapro.com</p>
-                    <p>📱 +34 900 123 456</p>
-                    <p>🌐 www.automatizapro.com</p>
+                    <h3>
+                        Nextautia.com - Mejoramos la productividad en tu negocio
+                        o empresa
+                    </h3>
+                    <p>📧 contacto@nextautia.com</p>
+                    <p>📱 +34 610 510 642</p>
+                    <p>🌐 www.nexautia.com</p>
                     <p>📍 Barcelona, España</p>
                 </div>
                 <div class="vcard-buttons">
