--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
             </div>
         </div>
 
-        <footer>
+        <footer style="border: 4px solid green">
             <p>
                 &copy; 2025 AutomatitzaPro. Transformant empreses amb
                 automatització intel·ligent.
