--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                             width="340"
                             height="auto"
                             id="logo"
+                            style="border: 4px white solid"
                         />
                     </a>
                 </div>
