--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
             </button>
         </div>
 
-        <header style="border: 4px red solid">
+        <header>
             <div class="header-content">
-                <div class="logo" style="border: 4px green solid">
+                <div class="logo">
                     <a href="#top" data-track="nav-logo">
                         <img
                             src="logo.svg"
@@ -97,11 +97,10 @@
                             width="340"
                             height="auto"
                             id="logo"
-                            style="border: 4px white solid"
                         />
                     </a>
                 </div>
-                <nav style="border: 4px yellow solid">
+                <nav>
                     <a href="#servicios" data-track="nav-servicios"
                         >Servicios</a
                     >
@@ -117,7 +116,7 @@
                     >
                     <a href="#contacto" data-track="nav-contacto">Contacto</a>
                 </nav>
-                <div class="header-controls" style="border: 2px solid black">
+                <div class="header-controls">
                     <div class="language-selector">
                         <button
                             id="current-language"
@@ -892,7 +891,7 @@
             </div>
         </div>
 
-        <footer style="border: 4px solid green">
+        <footer>
             <p>
                 &copy; 2025 AutomatitzaPro. Transformant empreses amb
                 automatització intel·ligent.
