--- a/index.html
+++ b/index.html
@@ -895,7 +895,7 @@
             <div class="social-links">
                 <!-- Logo de Facebook -->
                 <a
-                    href="https://www.facebook.com/profile.php?viewas=100000686899395&id=61579981550830"
+                    href="https://www.facebook.com/profile.php?id=61579981550830"
                     target="_blank"
                     aria-label="Segueix-nos a Facebook"
                 >
