--- a/ianinos/index.html
+++ b/ianinos/index.html
@@ -555,7 +555,12 @@
         <header>
             <div class="container">
                 <div class="logo">
-                    <a href="https://www.nexautia.com" target="_blank" rel="noopener noreferrer" data-track="nav-logo">
+                    <a
+                        href="https://www.nexautia.com"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        data-track="nav-logo"
+                    >
                         <img
                             src="logo.svg"
                             alt="NEXAUTIA"
@@ -1069,43 +1074,61 @@
                 <div class="footer-content">
                     <div class="footer-links">
                         <div class="social-links">
-                            <a href="https://www.facebook.com/profile.php?id=61579981550830" 
-                               target="_blank" 
-                               rel="noopener noreferrer" 
-                               class="social-link" 
-                               aria-label="Síguenos en Facebook">
+                            <a
+                                href="https://www.facebook.com/profile.php?id=61579981550830"
+                                target="_blank"
+                                rel="noopener noreferrer"
+                                class="social-link"
+                                aria-label="Síguenos en Facebook"
+                            >
                                 <svg class="social-icon" viewBox="0 0 24 24">
-                                    <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+                                    <path
+                                        d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"
+                                    />
                                 </svg>
                             </a>
-                            <a href="#" 
-                               target="_blank" 
-                               rel="noopener noreferrer" 
-                               class="social-link" 
-                               aria-label="Síguenos en LinkedIn">
+                            <a
+                                href="#"
+                                target="_blank"
+                                rel="noopener noreferrer"
+                                class="social-link"
+                                aria-label="Síguenos en LinkedIn"
+                            >
                                 <svg class="social-icon" viewBox="0 0 24 24">
-                                    <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+                                    <path
+                                        d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"
+                                    />
                                 </svg>
                             </a>
                         </div>
-                        
-                        <a href="https://www.nexautia.com" 
-                           target="_blank" 
-                           rel="noopener noreferrer" 
-                           class="footer-logo">
-                            <img src="logo.svg" alt="NEXAUTIA" width="200" height="auto" />
+
+                        <a
+                            href="https://www.nexautia.com"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            class="footer-logo"
+                        >
+                            <img
+                                src="logo.svg"
+                                alt="NEXAUTIA"
+                                width="200"
+                                height="auto"
+                            />
                         </a>
                     </div>
-                    
+
                     <div class="footer-text">
                         <p>
-                            ¡Sigue explorando el increíble mundo de la Inteligencia
-                            Artificial!
+                            ¡Sigue explorando el increíble mundo de la
+                            Inteligencia Artificial!
                         </p>
                         <p>
-                            Creado con ❤️ por Nexautia para el traspaso de conocimiento
+                            Creado con ❤️ por Nexautia para el traspaso de
+                            conocimiento
                         </p>
-                        <pre>Nexautia, Transformando empresas con automatización inteligente.</pre>
+                        <pre>
+Nexautia, Transformando empresas con automatización inteligente.</pre
+                        >
                     </div>
                 </div>
             </div>
@@ -1363,105 +1386,88 @@
         </script>
     </body>
 </html>
-                            x="35"
-                            y="45"
-                            width="50"
-                            height="60"
-                            rx="10"
-                            fill="#FF7E5F"
-                            stroke="#2A4D69"
-                            stroke-width="3"
-                        />
 
-                        <!-- Robot Head -->
-                        <rect
-                            x="40"
-                            y="15"
-                            width="40"
-                            height="40"
-                            rx="8"
-                            fill="#4BC6B9"
-                            stroke="#2A4D69"
-                            stroke-width="3"
-                        />
+<!-- Robot Head -->
+<rect
+    x="40"
+    y="15"
+    width="40"
+    height="40"
+    rx="8"
+    fill="#4BC6B9"
+    stroke="#2A4D69"
+    stroke-width="3"
+/>
 
-                        <!-- Eyes -->
-                        <circle cx="48" cy="30" r="4" fill="#2A4D69" />
-                        <circle cx="72" cy="30" r="4" fill="#2A4D69" />
-                        <circle cx="48" cy="30" r="2" fill="white" />
-                        <circle cx="72" cy="30" r="2" fill="white" />
+<!-- Eyes -->
+<circle cx="48" cy="30" r="4" fill="#2A4D69" />
+<circle cx="72" cy="30" r="4" fill="#2A4D69" />
+<circle cx="48" cy="30" r="2" fill="white" />
+<circle cx="72" cy="30" r="2" fill="white" />
 
-                        <!-- Mouth -->
-                        <rect
-                            x="55"
-                            y="38"
-                            width="10"
-                            height="4"
-                            rx="2"
-                            fill="#2A4D69"
-                        />
+<!-- Mouth -->
+<rect x="55" y="38" width="10" height="4" rx="2" fill="#2A4D69" />
 
-                        <!-- Antenna -->
-                        <line
-                            x1="60"
-                            y1="15"
-                            x2="60"
-                            y2="5"
-                            stroke="#2A4D69"
-                            stroke-width="3"
-                            stroke-linecap="round"
-                        />
-                        <circle cx="60" cy="5" r="3" fill="#FF7E5F" />
+<!-- Antenna -->
+<line
+    x1="60"
+    y1="15"
+    x2="60"
+    y2="5"
+    stroke="#2A4D69"
+    stroke-width="3"
+    stroke-linecap="round"
+/>
+<circle cx="60" cy="5" r="3" fill="#FF7E5F" />
 
-                        <!-- Arms -->
-                        <rect
-                            x="20"
-                            y="55"
-                            width="15"
-                            height="8"
-                            rx="4"
-                            fill="#4BC6B9"
-                            stroke="#2A4D69"
-                            stroke-width="2"
-                        />
-                        <rect
-                            x="85"
-                            y="55"
-                            width="15"
-                            height="8"
-                            rx="4"
-                            fill="#4BC6B9"
-                            stroke="#2A4D69"
-                            stroke-width="2"
-                        />
+<!-- Arms -->
+<rect
+    x="20"
+    y="55"
+    width="15"
+    height="8"
+    rx="4"
+    fill="#4BC6B9"
+    stroke="#2A4D69"
+    stroke-width="2"
+/>
+<rect
+    x="85"
+    y="55"
+    width="15"
+    height="8"
+    rx="4"
+    fill="#4BC6B9"
+    stroke="#2A4D69"
+    stroke-width="2"
+/>
 
-                        <!-- Hands -->
-                        <circle
-                            cx="20"
-                            cy="59"
-                            r="6"
-                            fill="#FF7E5F"
-                            stroke="#2A4D69"
-                            stroke-width="2"
-                        />
-                        <circle
-                            cx="100"
-                            cy="59"
-                            r="6"
-                            fill="#FF7E5F"
-                            stroke="#2A4D69"
-                            stroke-width="2"
-                        />
+<!-- Hands -->
+<circle
+    cx="20"
+    cy="59"
+    r="6"
+    fill="#FF7E5F"
+    stroke="#2A4D69"
+    stroke-width="2"
+/>
+<circle
+    cx="100"
+    cy="59"
+    r="6"
+    fill="#FF7E5F"
+    stroke="#2A4D69"
+    stroke-width="2"
+/>
 
-                        <!-- Legs -->
-                        <rect
-                            x="45"
-                            y="105"
-                            width="8"
-                            height="12"
-                            rx="4"
-                            fill="#4BC6B9"
-                            stroke="#2A4D69"
-                            stroke-width="2"
-                        />
-                        <rect
+<!-- Legs -->
+<rect
+    x="45"
+    y="105"
+    width="8"
+    height="12"
+    rx="4"
+    fill="#4BC6B9"
+    stroke="#2A4D69"
+    stroke-width="2"
+/>
