--- a/ianinos/index.html
+++ b/ianinos/index.html
@@ -1126,9 +1126,10 @@
                             Creado con ❤️ por Nexautia para el traspaso de
                             conocimiento
                         </p>
-                        <pre>
-Nexautia, Transformando empresas con automatización inteligente.</pre
-                        >
+                        <p>
+                            Nexautia, Transformando empresas con automatización
+                            inteligente.
+                        </p>
                     </div>
                 </div>
             </div>
