--- a/ianinos/index.html
+++ b/ianinos/index.html
@@ -533,6 +533,28 @@
                 .quiz-section {
                     padding: 30px 20px;
                 }
+
+                .contact-info {
+                    display: flex;
+                    gap: 20px;
+                    align-items: center;
+                    flex-wrap: nowrap;
+                }
+
+                .contact-item {
+                    display: flex;
+                    align-items: center;
+                    gap: 8px;
+                    text-decoration: none;
+                    color: var(
+                        --accent-color
+                    ); /* Verde que contrasta bien con fondo oscuro */
+                }
+
+                .contact-icon {
+                    width: 25px;
+                    height: 25px;
+                }
             }
 
             /* Accessibility */
