--- a/ianinos/index.html
+++ b/ianinos/index.html
@@ -536,15 +536,13 @@
 
                 .contact-info {
                     display: flex;
-                    gap: 20px;
                     align-items: center;
-                    flex-wrap: nowrap;
+                    flex-wrap: wrap;
                 }
 
                 .contact-item {
                     display: flex;
                     align-items: center;
-                    gap: 8px;
                     text-decoration: none;
                     color: var(
                         --accent-color
