--- a/ianinos/index.html
+++ b/ianinos/index.html
@@ -537,12 +537,14 @@
                 .contact-info {
                     display: flex;
                     align-items: center;
+                    text-align: center;
                     flex-wrap: wrap;
                 }
 
                 .contact-item {
                     display: flex;
                     align-items: center;
+                    text-align: center;
                     text-decoration: none;
                     color: var(
                         --accent-color
@@ -552,6 +554,8 @@
                 .contact-icon {
                     width: 25px;
                     height: 25px;
+                    align-items: center;
+                    text-align: center;
                 }
             }
 
