--- a/automatizacion_empresa_ia/index.html
+++ b/automatizacion_empresa_ia/index.html
@@ -753,6 +753,61 @@
                     font-size: 0.9rem;
                     margin: 0.25rem;
                 }
+                /* Centrar el contenedor de información de contacto */
+                .contact-info {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    text-align: center;
+                    width: 100%;
+                }
+
+                /* Centrar cada elemento de contacto (teléfono y email) */
+                .contact-item {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    text-align: center;
+                    width: 100%;
+                    margin: 8px 0; /* Espacio entre elementos */
+                }
+
+                /* Asegurar que el icono y texto estén centrados */
+                .contact-icon {
+                    margin-right: 8px; /* Espacio entre icono y texto */
+                }
+
+                .contact-text {
+                    text-align: center;
+                }
+
+                /* Si el footer completo necesita centrado adicional */
+                .footer-content {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    text-align: center;
+                }
+
+                /* Centrar también los enlaces sociales y logo si es necesario */
+                .footer-links {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    width: 100%;
+                }
+
+                .social-links {
+                    display: flex;
+                    justify-content: center;
+                    margin-bottom: 16px;
+                }
+
+                .footer-logo {
+                    display: flex;
+                    justify-content: center;
+                    margin-bottom: 16px;
+                }
             }
 
             @media (max-width: 320px) {
