--- a/recursos/index.html
+++ b/recursos/index.html
@@ -91,7 +91,7 @@
         </div>
     </div>
         <header>
-            <div class="header-content">
+            <div class="header-content2">
                 <div class="p2_logo">
                     <a href="#top" data-track="nav-logo">
                         <img
